--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "screenfull": "^5.0.2",
@@ -19,13 +20,15 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "xlsx": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
